--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,32 +12,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    # Checkout the code
+    - uses: actions/checkout@v4
+
     - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1.9.0
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.x
       
+    # Install dotnet wasm buildtools workload
+    - name: Install .NET WASM Build Tools
+      run: dotnet workload install wasm-tools
+      
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish ./my-web.mc/my-web.mc.csproj -c Release -o release
+      run: dotnet publish ./my-web.mc/my-web.mc.csproj -c:Release -p:GHPages=true -o:release --nologo
     
     # changes the base-tag in index.html from '/' to 'my-web.mc' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to my-web.mc
-      run: sed -i 's/<base href="\/" \/>/<base href="\/my-web.mc\/" \/>/g' release/wwwroot/index.html
+    #- name: Change base-tag in index.html from / to my-web.mc
+    #  run: sed -i 's/<base href="\/" \/>/<base href="\/my-web.mc\/" \/>/g' release/wwwroot/index.html
       
     # copy index.html to 404.html to serve the same file when a file is not found
-    - name: copy index.html to 404.html
-      run: cp release/wwwroot/index.html release/wwwroot/404.html
+    #- name: copy index.html to 404.html
+    #  run: cp release/wwwroot/index.html release/wwwroot/404.html
     
     # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
-    - name: Add .nojekyll file
-      run: touch release/wwwroot/.nojekyll
+    #- name: Add .nojekyll file
+    #  run: touch release/wwwroot/.nojekyll
     
     # publish to github pages
     - name: Commit wwwroot to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+      uses: JamesIves/github-pages-deploy-action@4
       with:
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: release/wwwroot
